# microblog

./: .gitignore  Makefile  app.db  config.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: codeql.yml  fortify.yml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: base.html  index.html  login.html  user.html
migrations/versions/: 063e36fda100_users_table.py  0f3a864094ed_new_fields_in_user_model.py  801e4e88a7f0_posts_table.py  93c95e6f7d60_add_followers_association.py  ae346256b650_followers.py
