[project]
name = "microblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.16.5",
    "blinker==1.9.0",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "pip==21.2.4",
    "setuptools==58.0.4",
    "sqlalchemy==2.0.45",
    "tomli==2.4.0",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.5",
    "wtforms==3.2.1",
    "zipp==3.23.0",
]
